데이터 수정

--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,8 +1,11 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
+#### 문화센터 업무시스템 개발/운영
+  - **결제시스템** 운영 및 관리
+  - **강사료 정산** 프로그램 운영 및 리
+  - **대고객/개인정보 처리 시스템** 취약점 점검 및 강화
 
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 문화홀 업무시스템 개발/운영
+  - 공연 관리 프로그램 운영 및 관리
+  - 티켓 발행/이력 확인 지원
+
+#### 주요실적
+  - 대고객 부하테스트 진행 및 프로세스 개선
