--- a/public/markdown/workExperience/1.md
+++ b/public/markdown/workExperience/1.md
@@ -1,8 +1,5 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
-
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 법인영업 업무시스템 개발/운영
+- **백화점 법인판매 시스템** 운영 및 관리
+- **입금,분개,세금계산서 발행** 프로그램 운영 및 리
+- **대고객/개인정보 처리 시스템** 취약점 점검 및 강화
+    
