데이터 수정 건 커밋(내용 기본 업데이트 - 계속 수정 필요)

--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,7 +1,12 @@
+> **[문센]** 으로 잘 알려져 있는 백화점 강좌 수강신청 서비스입니다. 
+> 입사 후 프로제트 재구축 참여를 시작으로 약 8년간 운영을 담당하였습니다. 
+> **[온라인]** 영역에서는 온라인결제/사전접수부하관리/대고객사이트 개발/운영을 담당하였고 
+> **[오프라인]** 영역에서는 기준정보/결제/매출/정산 등 기본적인 유통 프로세스를 기반으로 한 시스템을 관리하고 개발하였습니다. 
+
 #### 문화센터 업무시스템 개발/운영
-  - **결제시스템** 운영 및 관리
-  - **강사료 정산** 프로그램 운영 및 리
-  - **대고객/개인정보 처리 시스템** 취약점 점검 및 강화
+  - `결제시스템` 운영 및 관리
+  - `강사료 정산` 프로그램 운영 및 관리
+  - `대고객/개인정보 처리 시스템` 취약점 점검 및 강화
 
 #### 문화홀 업무시스템 개발/운영
   - 공연 관리 프로그램 운영 및 관리
